--- a/app/index-async.html
+++ b/app/index-async.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="utf-8">
   <style>
-    [ng-cloak] {
+    [data-ng-cloak] {
       display: none;
     }
   </style>
   <script>
     // include angular loader, which allows the files to load in any order
     /*
-     AngularJS v1.0.0rc1
-     (c) 2010-2012 AngularJS http://angularjs.org
+     AngularJS v1.0.6
+     (c) 2010-2012 Google, Inc. http://angularjs.org
      License: MIT
     */
-    'use strict';(function(i){function d(c,a,e){return c[a]||(c[a]=e())}return d(d(i,"angular",Object),"module",function(){var c={};return function(a,e,f){e&&c.hasOwnProperty(a)&&(c[a]=null);return d(c,a,function(){function b(a,b,d){return function(){c[d||"push"]([a,b,arguments]);return g}}if(!e)throw Error("No module: "+a);var c=[],d=[],h=b("$injector","invoke"),g={_invokeQueue:c,_runBlocks:d,requires:e,name:a,provider:b("$provide","provider"),factory:b("$provide","factory"),service:b("$provide","service"),
-    value:b("$provide","value"),constant:b("$provide","constant","unshift"),filter:b("$filterProvider","register"),directive:b("$compileProvider","directive"),config:h,run:function(a){d.push(a);return this}};f&&h(f);return g})}})})(window);
+    (function(i){'use strict';function d(c,b,e){return c[b]||(c[b]=e())}return d(d(i,"angular",Object),"module",function(){var c={};return function(b,e,f){e&&c.hasOwnProperty(b)&&(c[b]=null);return d(c,b,function(){function a(a,b,d){return function(){c[d||"push"]([a,b,arguments]);return g}}if(!e)throw Error("No module: "+b);var c=[],d=[],h=a("$injector","invoke"),g={_invokeQueue:c,_runBlocks:d,requires:e,name:b,provider:a("$provide","provider"),factory:a("$provide","factory"),service:a("$provide","service"),
+    value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a("$filterProvider","register"),controller:a("$controllerProvider","register"),directive:a("$compileProvider","directive"),config:h,run:function(a){d.push(a);return this}};f&&h(f);return g})}})})(window);
 
     // include a third-party async loader library
     /*!
@@ -30,28 +30,37 @@
     // load all of the dependencies asynchronously.
     $script([
       'lib/angular/angular.js',
-      'js/app.js',
-      'js/services.js',
-      'js/controllers.js',
-      'js/filters.js',
-      'js/directives.js'
+      'js/demo/app.js',
+      'js/demo/values.js',
+      'js/demo/providers/usersProvider.js',
+      'js/demo/controllers/myController1.js',
+      'js/demo/controllers/myController2.js',
+      'js/demo/controllers/myController3.js',
+      'js/demo/controllers/myController4.js',
+      'js/demo/filters/interpolateFilter.js',
+      'js/demo/directives/webDirective.js',
+      'js/demo/models/entities/User.js',
+      'js/demo/models/services/UserService.js'
     ], function() {
       // when all is done, execute bootstrap angular application
-      angular.bootstrap(document, ['myApp']);
+      angular.bootstrap(document, ['demo']);
     });
   </script>
   <title>My AngularJS App</title>
   <link rel="stylesheet" href="css/app.css">
+  <meta name="fragment" content="!">
 </head>
-<body ng-cloak>
+<body data-ng-cloak>
   <ul class="menu">
     <li><a href="#/view1">view1</a></li>
     <li><a href="#/view2">view2</a></li>
+    <li><a href="#/view3">view3</a></li>
+    <li><a href="#/view4">view4</a></li>
   </ul>
 
-  <div ng-view></div>
+  <div data-ng-view></div>
 
-  <div>Angular seed app: v<span app-version></span></div>
+  <div>Angular demo app</div>
 
 </body>
 </html>
